@@ -18,6 +18,7 @@ java {
 
 
 configurations {
+    mockitoAgent
     compileOnly {
         extendsFrom annotationProcessor
     }
@@ -45,10 +46,13 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
     testImplementation "org.mockito:mockito-core:5.+"
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
 }
 
 tasks.named('test') {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
     useJUnitPlatform()
     finalizedBy jacocoTestReport
     reports {
